<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoR Calculator</string>
    <string name="title_player_detail">Player Detail</string>
    <string name="title_player_list">Players</string>
    <string name="title_tournaments_list">Tournaments</string>
    <string name="title_player">Player</string>
    <string name="title_calculator">GoR Calculator</string>
    <string name="title_gor">New GoR</string>
    <string name="title_grade">Grade Range</string>
    <string name="title_country">Select country</string>
    <string name="title_tournament">Tournament class</string>
    <string name="title_opponents">Opponents</string>
    <string name="title_gor_change">%1$s → %2$s</string>
    <string name="title_filter">Filter</string>
    
    <string name="button_reset">Reset rating</string>
    <string name="button_change_player">Change</string>
    <string name="button_add_opponent">Add an Opponent</string>
    <string name="button_add_tournament">Add tournament</string>
    <string name="button_tournaments">Tournaments</string>
    <string name="button_find_player">Find</string>
    <string name="button_game_details">Details</string>
    <string name="button_update">Update</string>
    <string name="button_save_filter">Save Filter</string>
    <string name="button_apply">Apply</string>
    <string name="button_delete">Delete</string>
    <string name="tournament_class">Class</string>
    <string name="gor_change">%1$s (%2$s)</string>
    <string name="hint_player_gor">Go Rating</string>
    
    <string name="game_result_win">Win</string>
    <string name="game_result_loss">Loss</string>
    
    <string name="game_color_black">Black</string>
    <string name="game_color_white">White</string>
    <string name="dialog_handicap_color">Your color</string>
    <string name="dialog_handicap_stones">Handicap</string>
    <string name="dialog_gor">Edit GoR</string>
    <string name="no_results">No results</string>

    <string name="tournament_opponents_count">%1$d opponents</string>
    <string name="tournament_delete">Delete tournament</string>
    <string name="tournament_delete_message">Are you sure to delete this tournament?</string>
    <string name="tournament_changed">Active tournament has changed</string>
    <string name="tournament_deleted">Tournament has been deleted</string>
    <string name="tournament_created">New tournament has been created</string>
    
    <string-array name="tournament_class">
        <item>Class A</item>
        <item>Class B</item>
        <item>Class C</item>
    </string-array>
    
    <string-array name="handicaps">
        <item>Even game</item>
        <item>No Komi</item>
        <item>2 stones</item>
        <item>3 stones</item>
        <item>4 stones</item>
        <item>5 stones</item>
        <item>6 stones</item>
        <item>7 stones</item>
        <item>8 stones</item>
        <item>9 stones</item>
    </string-array>

    <string name="filter_name">Name</string>
    <string name="filter_club">Club</string>
    <string name="filter_country">Country</string>
    <string name="filter_grade">Grade</string>
    <string name="filters_saved">Filter configuration saved</string>
    
    <string name="update_downloading">Downloading players list &#8230;</string>
    <string name="update_download_cancelled">Downloading cancelled</string>
    <string name="update_completed">Players database updated</string>
    <string name="update_storing">Saving players &#8230;</string>
    <string name="update_storing_cancelled">Saving players cancelled</string>
    <string name="update_reason">Do you want to download players list from European Go Database? It might take couple of minutes.</string>
    
    <string name="dont_show">Don\'t show again</string>
    <string name="help_tips">Hint</string>
    <string name="help_delete_opponent">Slide opponent right or left to delete it</string>
    <string name="help_add_tournaments">You have created new tournament. You can switch to other tournaments on Tournaments list screen.</string>
    <string name="help_filter">You can save current filter configuration as default by clicking Save filter.</string>
    <string name="help_find_player">Click Find button to get Go Rating of any player from Europe.</string>
    
    <string name="country_all">Show all</string>
    <string name="country_AD">Andorra</string>
    <string name="country_AG">Antigua e Barbuda</string>
    <string name="country_AR">Argentina</string>
    <string name="country_AM">Armenia</string>
    <string name="country_AU">Australia</string>
    <string name="country_AT">Austria</string>
    <string name="country_AZ">Azerbaijan</string>
    <string name="country_BY">Belarus</string>
    <string name="country_BE">Belgium</string>
    <string name="country_BA">Bosnia</string>
    <string name="country_BR">Brasile</string>
    <string name="country_BN">Brunei</string>
    <string name="country_BG">Bulgaria</string>
    <string name="country_CA">Canada</string>
    <string name="country_CN">China</string>
    <string name="country_CL">Cile</string>
    <string name="country_CO">Colombia</string>
    <string name="country_CR">Costa Rica</string>
    <string name="country_HR">Croatia</string>
    <string name="country_CU">Cuba</string>
    <string name="country_CY">Cyprus</string>
    <string name="country_CZ">Czechia</string>
    <string name="country_DK">Denmark</string>
    <string name="country_EC">Ecuador</string>
    <string name="country_EE">Estonia</string>
    <string name="country_FI">Finland</string>
    <string name="country_FR">France</string>
    <string name="country_GF">French Guiana</string>
    <string name="country_DE">Germany</string>
    <string name="country_GR">Greece</string>
    <string name="country_GT">Guatemala</string>
    <string name="country_HK">Hong Kong</string>
    <string name="country_HU">Hungary</string>
    <string name="country_IS">Iceland</string>
    <string name="country_IN">India</string>
    <string name="country_ID">Indonesia</string>
    <string name="country_IR">Iran</string>
    <string name="country_IE">Ireland</string>
    <string name="country_IL">Israel</string>
    <string name="country_IT">Italy</string>
    <string name="country_JP">Japan</string>
    <string name="country_KZ">Kazakhstan</string>
    <string name="country_KP">Korea Popular Republic</string>
    <string name="country_KR">Korea Republic</string>
    <string name="country_LV">Latvia</string>
    <string name="country_LT">Lithuania</string>
    <string name="country_LU">Luxemburg</string>
    <string name="country_MO">Macau</string>
    <string name="country_MK">Macedonia</string>
    <string name="country_MG">Madagascar</string>
    <string name="country_MY">Malaysia</string>
    <string name="country_MX">Mexico</string>
    <string name="country_MD">Moldova</string>
    <string name="country_MN">Mongolia</string>
    <string name="country_MA">Morocco</string>
    <string name="country_NP">Nepal</string>
    <string name="country_NL">Netherlands</string>
    <string name="country_NZ">New Zeland</string>
    <string name="country_NO">Norway</string>
    <string name="country_PA">Panama</string>
    <string name="country_PE">Peru</string>
    <string name="country_PH">Philippines</string>
    <string name="country_PL">Poland</string>
    <string name="country_PT">Portugal</string>
    <string name="country_RS">Republic of Serbia</string>
    <string name="country_RO">Romania</string>
    <string name="country_RU">Russia</string>
    <string name="country_SM">San Marino</string>
    <string name="country_SG">Singapore</string>
    <string name="country_SK">Slovakia</string>
    <string name="country_SI">Slovenia</string>
    <string name="country_ZA">South Africa</string>
    <string name="country_ES">Spain</string>
    <string name="country_SE">Sweden</string>
    <string name="country_CH">Switzerland</string>
    <string name="country_TA">Unknown</string>
    <string name="country_TW">Taiwan</string>
    <string name="country_TH">Thailand</string>
    <string name="country_TO">Tonga Islands</string>
    <string name="country_TR">Turkey</string>
    <string name="country_UA">Ukraine</string>
    <string name="country_UK">United Kingdom</string>
    <string name="country_US">United States</string>
    <string name="country_XX">Unknown</string>
    <string name="country_UY">Uruguay</string>
    <string name="country_UZ">Uzbekistan</string>
    <string name="country_VE">Venezuela</string>
    <string name="country_VN">Vietnam</string>
    <string name="country_YU">Yugoslavia</string>
    
    <string name="dialog_about">About</string>
    <string name="about_url">file:///android_asset/about.html</string>
    
    <string name="version_info">Version: </string>
    <string name="version">1.0</string>

</resources>