<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/add_tournament"
        android:icon="@drawable/ic_new_tournament"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_add_tournament"/>
    
    <item
        android:id="@+id/manage_tournaments"
        android:icon="@drawable/ic_tournaments"
        android:showAsAction="ifRoom|withText"
        android:title="@string/button_tournaments"
        />
    
    <item
        android:id="@+id/update_data"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="collapseActionView"
        android:title="@string/button_update"/>
    
    <item
        android:id="@+id/about"
        android:showAsAction="collapseActionView"
        android:title="@string/dialog_about"/>

</menu>