<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:measureWithLargestChild="false"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:padding="@dimen/margin_box"
        android:text="@string/title_gor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/dialog_gor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_box"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" >

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonResetGor"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_box"
            android:layout_weight="1"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/buttonApply"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_box"
            android:layout_marginRight="@dimen/margin_box"
            android:layout_weight="1"
            android:text="@string/button_apply" />

    </LinearLayout>
</LinearLayout>