<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/opponent_simple"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/playerGor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:selectAllOnFocus="true"
            android:ems="10"
            android:hint="@string/hint_player_gor"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonFindPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_find_player"
            android:visibility="gone" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/toggleWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="ToggleButton"
            android:textOff="LOSS"
            android:textOn="WIN" />

        <TextView
            android:id="@+id/handicapStones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/handicapColor"
            android:layout_below="@+id/handicapColor"
            android:text="No of stones"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/handicapColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonHandicap"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/buttonHandicap"
            android:text="Color"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Button
            android:id="@+id/buttonHandicap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_game_details" />

    </RelativeLayout>

    <TextView
        android:id="@+id/playerGorChange"
        style="@style/GorResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/padding_title"
        android:gravity="center_horizontal"
        android:text="@string/gor_change"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>