<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <merge xmlns:android="http://schemas.android.com/apk/res/android" > -->

    <Button
        android:id="@+id/playerButtonGor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="1483" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playerButtonGor"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/playerButtonChange"
        android:layout_toRightOf="@+id/playerButtonGor"
        android:gravity="center_vertical"
        android:text="Artur Barcicki"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/playerGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/playerButtonGor"
        android:layout_below="@+id/playerButtonGor"
        android:gravity="center_horizontal"
        android:text="6 kyu"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/playerClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerName"
        android:layout_below="@+id/playerName"
        android:layout_marginRight="@dimen/padding_title_vertical"
        android:text="Pozn"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/playerCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerName"
        android:layout_toRightOf="@+id/playerClub"
        android:paddingBottom="@dimen/padding_title_vertical"
        android:text="PL"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/playerButtonFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/playerName"
        android:layout_alignBottom="@+id/playerName"
        android:layout_alignLeft="@+id/playerName"
        android:layout_alignParentRight="true"
        android:text="@string/button_find_player"
        android:visibility="invisible" />

    <Button
        android:id="@+id/playerButtonChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_change_player" />

    <!-- </merge> -->

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/playerCountry" >

        <ToggleButton
            android:id="@+id/toggleWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="ToggleButton"
            android:textOff="LOSS"
            android:textOn="WIN" />

        <TextView
            android:id="@+id/handicapStones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/handicapColor"
            android:layout_below="@+id/handicapColor"
            android:text="No of stones"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/handicapColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonHandicap"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/buttonHandicap"
            android:text="Color"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/buttonHandicap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_game_details" />
    </RelativeLayout>

    <TextView
        android:id="@+id/playerGorChange"
        style="@style/GorResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout2"
        android:background="@android:color/background_dark"
        android:gravity="center_horizontal"
        android:text="@string/gor_change"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>